Fix list and blockquote colors, navbar menu hover contrast

--- a/pocket-dark.user.css
+++ b/pocket-dark.user.css
@@ -357,6 +357,9 @@
   .css-rg5q7m {
     color: var(--light-gray);
   }
+  .css-4z0h1o, .css-4z0h1o:hover {
+    color: var(--light-gray-two);
+  }
   /* signup and login */
   .forgot-content, .signup-content, .wrapper-savefrombrowser, .wrapper-unlimited,
   .wrapper-waystosave {
@@ -380,7 +383,7 @@
     color: var(--icon-gray);
   }
   .article-join-us .message, .syndicated-article-byline, .publisher-cta,
-  .publisher-cta .cta-button, .story-page .story-content ul li {
+  .publisher-cta .cta-button {
     color: var(--mid-gray-three);
   }
   .article-join-us a:hover, .story-content a:hover,
@@ -390,8 +393,12 @@
   h1, h2, h3, h4, h5, h6 {
     color: var(--mid-gray-three) !important;
   }
-  .syndication-article-header .subhead, .story-page .story-content ul li {
+  .syndication-article-header .subhead {
     color: var(--light-gray) !important;
+  }
+  .story-page .story-content ul li, .story-content ol.numlist li,
+  .story-page .blockquote p, .story-page .blockquote q {
+    color: var(--light-gray);
   }
   .story-page .footer .signoff p, .comments .comment .content .date {
     color: var(--dark-gray-three);
